# php-ext-datrie

./: CMakeLists.txt  CREDITS  README.md  config.h.in~  config.m4  config.w32  datrie.php  demo.php  php_datrie.c  php_datrie.h
datrie/: Makefile.in  alpha-map.c  alpha-map.h  darray.c  darray.h  tail.c  tail.h  trie-private.h  trie-string.c  trie-string.h  trie.c  trie.h  triedefs.h
tests/: 001.phpt
